[package]
name = "rustymold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = "symbols"

[dependencies]
fastrand = "2.0.0"
minifb = "0.25.0"
arrayvec = "0.7.4"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_simulation"
harness = false